fix(code-block): on tablet size

--- a/src/layout/styles/global.css
+++ b/src/layout/styles/global.css
@@ -104,7 +104,7 @@ body samp {
 
 @media (min-width: 768px) {
   .code-block {
-    width: 77.7vw;
+    width: 55.5vw;
   }
 }
 
